@@ -1,5 +1,5 @@
 /*
- *  Copyright (C) 2011 - 2012  Arnaud Quette <arnaud.quette@free.fr>
+ *  Copyright (C) 2011 - 2024  Arnaud Quette <arnaud.quette@free.fr>
  *  Copyright (C) 2016 Michal Vyskocil <MichalVyskocil@eaton.com>
  *  Copyright (C) 2016 - 2023 Jim Klimov <EvgenyKlimov@eaton.com>
  *
@@ -61,7 +61,7 @@
 
 #define ERR_BAD_OPTION	(-1)
 
-static const char optstring[] = "?ht:T:s:e:E:c:l:u:W:X:w:x:p:b:B:d:L:CUSMOAm:QNPqIVaD";
+static const char optstring[] = "?ht:T:s:e:E:c:l:u:W:X:w:x:p:b:B:d:L:CUSMOAm:QnNPqIVaD";
 
 #ifdef HAVE_GETOPT_LONG
 static const struct option longopts[] = {
@@ -89,6 +89,7 @@ static const struct option longopts[] = {
 	{ "xml_scan", no_argument, NULL, 'M' },
 	{ "oldnut_scan", no_argument, NULL, 'O' },
 	{ "avahi_scan", no_argument, NULL, 'A' },
+	{ "nut_simulation_scan", no_argument, NULL, 'n' },
 	{ "ipmi_scan", no_argument, NULL, 'I' },
 	{ "disp_nut_conf_with_sanity_check", no_argument, NULL, 'Q' },
 	{ "disp_nut_conf", no_argument, NULL, 'N' },
@@ -144,6 +145,14 @@ static void * run_nut_old(void *arg)
 	NUT_UNUSED_VARIABLE(arg);
 
 	dev[TYPE_NUT] = nutscan_scan_nut(start_ip, end_ip, port, timeout);
+	return NULL;
+}
+
+static void * run_nut_simulation(void *arg)
+{
+	NUT_UNUSED_VARIABLE(arg);
+
+	dev[TYPE_NUT_SIMULATION] = nutscan_scan_nut_simulation();
 	return NULL;
 }
 
@@ -203,6 +212,7 @@ static void show_usage(void)
 	} else {
 		printf("* Options for NUT devices (avahi method) scan not enabled: library not detected.\n");
 	}
+	printf("  -n, --nut_simulation_scan: Scan for NUT simulated devices (.dev files in $CONFPATH).\n");
 	if (nutscan_avail_ipmi) {
 		printf("  -I, --ipmi_scan: Scan IPMI devices.\n");
 	} else {
@@ -360,6 +370,7 @@ int main(int argc, char *argv[])
 	int allow_snmp = 0;
 	int allow_xml = 0;
 	int allow_oldnut = 0;
+	int allow_nut_simulation = 0;
 	int allow_avahi = 0;
 	int allow_ipmi = 0;
 	int allow_eaton_serial = 0; /* MUST be requested explicitly! */
@@ -641,6 +652,9 @@ int main(int argc, char *argv[])
 				}
 				allow_avahi = 1;
 				break;
+			case 'n':
+				allow_nut_simulation = 1;
+				break;
 			case 'I':
 				if (!nutscan_avail_ipmi) {
 					goto display_help;
@@ -737,7 +751,7 @@ display_help:
 		upsdebugx(1, "Extracted IP address range from CIDR net/mask: %s => %s", start_ip, end_ip);
 	}
 
-	if (!allow_usb && !allow_snmp && !allow_xml && !allow_oldnut &&
+	if (!allow_usb && !allow_snmp && !allow_xml && !allow_oldnut && !allow_nut_simulation &&
 		!allow_avahi && !allow_ipmi && !allow_eaton_serial
 	) {
 		allow_all = 1;
@@ -748,6 +762,7 @@ display_help:
 		allow_snmp = 1;
 		allow_xml = 1;
 		allow_oldnut = 1;
+		allow_nut_simulation = 1;
 		allow_avahi = 1;
 		allow_ipmi = 1;
 		/* BEWARE: allow_all does not include allow_eaton_serial! */
@@ -832,6 +847,22 @@ display_help:
 		upsdebugx(1, "NUT bus (old) SCAN: not requested, SKIPPED");
 	}
 
+	if (allow_nut_simulation && nutscan_avail_nut_simulation) {
+		upsdebugx(quiet, "Scanning NUT simulation devices.");
+#ifdef HAVE_PTHREAD
+		upsdebugx(1, "NUT simulation devices SCAN: starting pthread_create with run_nut_simulation...");
+		if (pthread_create(&thread[TYPE_NUT_SIMULATION], NULL, run_nut_simulation, NULL)) {
+			upsdebugx(1, "pthread_create returned an error; disabling this scan mode");
+			nutscan_avail_nut_simulation = 0;
+		}
+#else
+			upsdebugx(1, "NUT simulation devices SCAN: no pthread support, starting nutscan_scan_nut_simulation...");
+			dev[TYPE_NUT_SIMULATION] = nutscan_scan_nut_simulation(timeout);
+#endif /* HAVE_PTHREAD */
+	} else {
+		upsdebugx(1, "NUT simulation devices SCAN: not requested, SKIPPED");
+	}
+
 	if (allow_avahi && nutscan_avail_avahi) {
 		upsdebugx(quiet, "Scanning NUT bus (avahi method).");
 #ifdef HAVE_PTHREAD
@@ -898,6 +929,10 @@ display_help:
 		upsdebugx(1, "NUT bus (old) SCAN: join back the pthread");
 		pthread_join(thread[TYPE_NUT], NULL);
 	}
+	if (allow_nut_simulation && nutscan_avail_nut_simulation && thread[TYPE_NUT_SIMULATION]) {
+		upsdebugx(1, "NUT simulation devices SCAN: join back the pthread");
+		pthread_join(thread[TYPE_NUT_SIMULATION], NULL);
+	}
 	if (allow_avahi && nutscan_avail_avahi && thread[TYPE_AVAHI]) {
 		upsdebugx(1, "NUT bus (avahi) SCAN: join back the pthread");
 		pthread_join(thread[TYPE_AVAHI], NULL);
@@ -933,6 +968,11 @@ display_help:
 	display_func(dev[TYPE_NUT]);
 	upsdebugx(1, "SCANS DONE: free resources: NUT bus (old)");
 	nutscan_free_device(dev[TYPE_NUT]);
+
+	upsdebugx(1, "SCANS DONE: display results: NUT simulation devices");
+	display_func(dev[TYPE_NUT_SIMULATION]);
+	upsdebugx(1, "SCANS DONE: free resources: NUT simulation devices");
+	nutscan_free_device(dev[TYPE_NUT_SIMULATION]);
 
 	upsdebugx(1, "SCANS DONE: display results: NUT bus (avahi)");
 	display_func(dev[TYPE_AVAHI]);
